--- a/conf/config.json.example
+++ b/conf/config.json.example
@@ -2,8 +2,8 @@
   "source": "www.markbest.site",
   "api": [
     {
-      "article": "http://127.0.0.1:8080/api/v1/article/list",
-      "category": "http://127.0.0.1:8080/api/v1/category/list"
+      "article": "http://www.markbest.site/api/v1/article/list",
+      "category": "http://www.markbest.site/api/v1/category/list"
     }
   ]
 }
